--- a/relazione.tex
+++ b/relazione.tex
@@ -707,7 +707,7 @@ energy harvesting e wake up radio.\\
 
 In questo lavoro sono state mantenute costanti le configurazioni mostrate in \textbf{Tabella \ref{configs}} per tutti gli esperimenti al fine di poter
 confrontare i risultati ottenuti da ciascuna al variare del parametro di \emph{inter-arrival time} (\emph{iaTime}). Si noti come al variare del valore assunto
-da \emph{iaTime} varia il traffico di rete in quanto la frequenza con cui i pacchetti sono generati nella rete è definita come: $1/iaTime$ millisecondi.
+da \emph{iaTime} varia il traffico di rete in quanto la frequenza con cui i pacchetti sono generati nella rete è definita come: $1/iaTime$ secondi.
 Da questo segue che al diminuire del valore di \emph{iaTime} si potranno osservare delle variazioni nelle prestazioni sperimentate dalla rete in quanto
 cresce il traffico di rete e dunque il suo stato di congestionamento.\\
 
